--- a/src/pages/index/index.wxss
+++ b/src/pages/index/index.wxss
@@ -2,3 +2,11 @@
 .home-wrap {
   padding: 0 33rpx;
 }
+.footer-title {
+  text-align: center;
+  padding: 63rpx;
+  font-size:24rpx;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+  color:rgba(193,193,193,1);
+}
